# PersonalStudy

./: .gitignore
OpenGL/: CMakeLists.txt
OpenGL/glStudy/: CMakeLists.txt  main.cpp
OpenGL/glStudy/application/: Application.cpp  Application.h  CMakeLists.txt
OpenGL/glStudy/assets/shaders/: fragment.glsl  vetex.glsl
OpenGL/glStudy/funcs/: CMakeLists.txt  func.cpp
OpenGL/glStudy/glFramework/: CMakeLists.txt  Shader.cpp  Shader.h  Texture.cpp  Texture.h
OpenGL/glStudy/wrapper/: CMakeLists.txt  checkError.cpp  checkError.h
